Change getFirst and Create JAR file